// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note Form renders add if no note prop 1`] = `
<NoteForm
  onComplete={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="title"
      onChange={[Function]}
      value=""
    >
      <p>
        <label>
          title
          :
          <input
            name="title"
            onChange={[Function]}
            required={true}
            value=""
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="content"
      onChange={[Function]}
      type=""
      value=""
    >
      <p>
        <label>
          content
          :
          <input
            name="content"
            onChange={[Function]}
            required={true}
            type=""
            value=""
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</NoteForm>
`;

exports[`Note Form renders add if no note prop 2`] = `
<NoteForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "completed": false,
            "content": "some more text",
            "title": "some text",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="title"
      onChange={[Function]}
      value="some text"
    >
      <p>
        <label>
          title
          :
          <input
            name="title"
            onChange={[Function]}
            required={true}
            value="some text"
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="content"
      onChange={[Function]}
      type=""
      value="some more text"
    >
      <p>
        <label>
          content
          :
          <input
            name="content"
            onChange={[Function]}
            required={true}
            type=""
            value="some more text"
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</NoteForm>
`;

exports[`Note Form renders add if no note prop 3`] = `
<NoteForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "completed": false,
            "content": "some more text",
            "title": "some text",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="title"
      onChange={[Function]}
      value="some text"
    >
      <p>
        <label>
          title
          :
          <input
            name="title"
            onChange={[Function]}
            required={true}
            value="some text"
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="content"
      onChange={[Function]}
      type=""
      value="some more text"
    >
      <p>
        <label>
          content
          :
          <input
            name="content"
            onChange={[Function]}
            required={true}
            type=""
            value="some more text"
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</NoteForm>
`;
